# jpcastanom-Prediccion-del-precio-del-Whisky-en-Iowa

./: LICENSE  ProyectoFinalModeIV.html  ProyectoFinalModeIV.ipynb  Punto6.html  Punto6.ipynb  Punto6Interfáz1.ipynb  Punto6Interfáz2.ipynb  README.md  main.py  pyproject.toml
